# skills-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  STRUCTURE.md  install.sh  justfile  release-plz.toml  shape-up-ai-prompt.md
.github/workflows/: ci.yml  release-plz.yml  release.yml
claude/.claude/agents/: adonisjs-backend.md  code-reviewer.md  devops-infra.md  frontend-developer.md  kotlin-android.md  python-data.md  ruby-rails.md  swift-ios.md  typescript-pro.md  vue-expert.md
claude/.claude/commands/: adonisjs-backend.md  caveman.md  shape-up.md
opencode/.opencode/agents/: adonisjs-backend.md  code-reviewer.md  devops-infra.md  frontend-developer.md  kotlin-android.md  python-data.md  ruby-rails.md  swift-ios.md  typescript-pro.md  vue-expert.md
opencode/.opencode/commands/: shape-up-bet.md  shape-up-shape.md
opencode/.opencode/skills/adonisjs-backend/: SKILL.md
opencode/.opencode/skills/api-design/: SKILL.md
opencode/.opencode/skills/backend-patterns/: SKILL.md
opencode/.opencode/skills/caveman/: SKILL.md
opencode/.opencode/skills/coding-standards/: SKILL.md
opencode/.opencode/skills/database-migrations/: SKILL.md
opencode/.opencode/skills/deep-research/: SKILL.md
opencode/.opencode/skills/docker-patterns/: SKILL.md
opencode/.opencode/skills/e2e-testing/: SKILL.md
opencode/.opencode/skills/frontend-patterns/: SKILL.md
opencode/.opencode/skills/kotlin-coroutines-flows/: SKILL.md
src/: convert.rs  discovery.rs  item.rs  link.rs  main.rs  test_fixtures.rs  ui.rs
(+13 files in other folders)
