[package]
name = "skills-manager"
version = "0.1.0"
edition = "2024"
description = "Symlink-based installer for Claude Code / OpenCode skills, agents and commands"
license = "MIT"
readme = "README.md"
repository = "https://github.com/LeWawan/skills-manager"
homepage = "https://github.com/LeWawan/skills-manager"
publish = false

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[[bin]]
name = "skills-manager"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
inquire = "0.9.4"

[dev-dependencies]
tempfile = "3.27.0"
